--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Teatro Boletos</title>
 </head>
 <body>
-    <h1 id="message">QR Message</h1>
+    <h1>QR Message: <b><span id="message"></span></b></h1>
     <video ></video>
     <!-- Libreria aes-js -->
     <script type="text/javascript" src="https://cdn.rawgit.com/ricmoo/aes-js/e27b99df/index.js"></script>
