static-layout-en proceso

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -103,11 +103,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -119,11 +119,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -135,11 +135,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -151,11 +151,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -167,11 +167,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -183,11 +183,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -199,11 +199,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -215,11 +215,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -231,11 +231,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -247,11 +247,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -263,11 +263,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -279,11 +279,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -295,11 +295,11 @@
         <div class="car-fuction-items">
           <div class="dt-event">
             <h3 class="title-event">Rick and morty</h3>
-            <h4 class="hour-event">1AM-23/08/2023</h4>
-            <h2 class="precio-event">90,00bs</h2>
+            <h4 class="cine-event">Drama-Comedia</h4>
+            <h2 class="precio-event">$0.00</h2>
           </div>
           <div class="container-icon-buy">
-            <i class="fa-solid fa-cart-plus fa-flip-horizontal shop-buy-icon" ></i>
+            <i class="fa-solid fa-calendar-days shop-buy-icon" ></i>
 
           </div>
         </div>
@@ -329,7 +329,28 @@
           <a href="" class="secction-ticket"></a>
         </div>
         <div class="ticket-container">
+            <article class="ticket-shop-container">
+              <div class="delete-ticket-c">
+                <i class="fa-solid fa-xmark"></i>
+              </div>
+              <div class="ticket-img">
 
+              </div>
+              <div class="ticket-observaciones">
+                <div class="ticket-dt">
+                  <h4 class="name-obra">The tick And Morty</h4>
+                  <h5 class="ticket-fecha"><span class="fecha-lg"></span> <span class="fecha-un">25/06/2023 6pm</span></h5>
+                </div>
+                <div class="ticket-cant-pre">
+                  <h5 class="cantidad-boltetos">
+                    <span class="cant-sustracion"> - </span>
+                    <span class="ticket-un"> 01 </span>
+                    <span class="cant-adicion"> + </span>
+                  </h5>
+                  <h3 class="ticket-cant-precio"> $10.00</h3>
+                </div>
+              </div>
+            </article>
         </div>
       </article>
       <article class="aside-items aside-item3">
